# SimilarityChecker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  node.h
inc/: SearchTree.h
include/: avl_map.h  bst_map.h  main.h  map.h  node.h
src/: SearchTree.c  main.c  main.cpp
texts/: Analysis of Shakespeare's Works  Basics of Machine Learning  Global Health  History of the Internet  On Environmental Impact of Industrialization  Personal Reflection  Physics of Light  Short Story Excerpt  Travel Experience
